# Ondrixprivat

./: .gitignore  README.md
.github/workflows/: dependency-lock-check.yml  evm-scan.yml  solana-scan.yml
escrow-frontend/: reverse-pda.cjs  test-addresses.cjs  test-all-investors.cjs  test-conversion.js  test-data-reading.cjs  test-specific-wallet.cjs
escrow-frontend/public/api/: global-stats.js  lock-status.js
escrow-frontend/src/: vite-env.d.ts
escrow-frontend/src/components/: GlobalLockStatus.tsx  InvestmentDashboard.tsx  LandingPage.tsx  WalletConnection.tsx
escrow-frontend/src/config/: contracts.ts
escrow-frontend/src/hooks/: useSolanaInvestment.ts
escrow-frontend/src/utils/: solana.ts
ondrix-escrow-evm/: .env  SECURITY_AUDIT_REPORT.md  hardhat.config.ts  package.json
ondrix-escrow-evm/contracts/: OndrixEscrow.sol
ondrix-escrow-evm/contracts/mocks/: MockAggregatorV3.sol
ondrix-escrow-evm/contracts/test/: TestOndrixEscrow.sol
ondrix-escrow-solana/: Cargo.toml  README.md  SECURITY_AUDIT_REPORT.md  initialize-escrow.js
ondrix-escrow-solana/src/: lib.rs
ondrix-escrow-solana/src-v3-individual-timers/: lib.rs
ondrix-escrow-solana/tests-archive/v3-individual-timers/: v3-full-lifecycle.js  v3-lifecycle-test.js
ondrix-escrow-solana/tests-archive/v4-global-timer/: full-cycle-test.js  security-test.js  test-claim.js
ondrix-escrow-solana/tests-v3-individual-timers/: escrow.test.ts  setup.ts  utils.ts
ondrix-escrow-solana/tests/v4-current/: extended-security-tests.js  full-cycle-test.js  test-unsold-reclaim.js
